force-app/main/default/objects/cgcloud__Contract_Tactic__c/cgcloud__Contract_Tactic__c.object-meta.xml
<CustomObject>
    <description>Relation between a Contract and a Tactic template</description>
    <label>Contract Tactic</label>
    <nameField>
        <displayFormat>CT-{00000000}</displayFormat>
        <label>Contract Tactic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Tactic</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>