force-app/main/default/objects/cgcloud__Contract_Tactic__c/fields/cgcloud__Contract__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Contract__c</fullName>
    <description>Reference to the customer contract object.</description>
    <label>Customer Contract</label>
    <referenceTo>cgcloud__Contract__c</referenceTo>
    <relationshipLabel>Customer Contract Tactic</relationshipLabel>
    <relationshipName>Contract_Tactic</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>