force-app/main/default/objects/cgcloud__Contract_Tactic__c/fields/cgcloud__Contract_Tactic_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Contract_Tactic_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relation to the contract tactic template</description>
    <label>Contract Tactic Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__Contract_Template__c.cgcloud__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>cgcloud__Contract_Template__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Contract_Tactic_Template</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Contract_Template__c</referenceTo>
    <relationshipLabel>Contract Tactic</relationshipLabel>
    <relationshipName>Contract_Tactic</relationshipName>
    <type>Lookup</type>
</CustomField>