force-app/main/default/objects/cgcloud__Contract_Tactic__c/fields/cgcloud__Cost_Amount__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Cost_Amount__c</fullName>
    <label>Amount</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>