force-app/main/default/objects/cgcloud__Contract_Tactic__c/fields/cgcloud__Record_Link__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Record_Link__c</fullName>
    <description>Link to the detail page of the contract tactic</description>
    <formula>(HYPERLINK(&quot;/&quot; &amp;Id, $Label.cgcloud__RECORD_LINK, &quot;_top&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Link</label>
    <type>Text</type>
</CustomField>