force-app/main/default/objects/cgcloud__Contract_Tactic__c/fields/cgcloud__Valid_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Valid_Thru__c</fullName>
    <defaultValue>DATE(2099,12,31)</defaultValue>
    <description>Last date of validity period of the contract tactic.</description>
    <label>Valid Thru</label>
    <type>Date</type>
</CustomField>