force-app/main/default/objects/cgcloud__Contract_Tactic__c/validationRules/cgcloud__Amount_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Amount_negative</fullName>
    <active>true</active>
    <errorConditionFormula>cgcloud__Cost_Amount__c &lt; 0</errorConditionFormula>
    <errorMessage>The Amount must be a number equal or greater than 0.</errorMessage>
</ValidationRule>