force-app/main/default/objects/cgcloud__Contract_Tactic__c/validationRules/cgcloud__Avoid_Template_Modification.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Avoid_Template_Modification</fullName>
    <active>true</active>
    <description>The Contract Tactic Template can&apos;t be edited after Contract Tactic creation.</description>
    <errorConditionFormula>ISCHANGED(cgcloud__Contract_Tactic_Template__c)</errorConditionFormula>
    <errorMessage>The Contract Tactic Template can&apos;t be edited after Contract Tactic creation.</errorMessage>
</ValidationRule>