force-app/main/default/objects/cgcloud__Contract_Tactic__c/validationRules/cgcloud__ValidThruOlderThanValidFrom.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__ValidThruOlderThanValidFrom</fullName>
    <active>true</active>
    <description>Valid From can&apos;t be later than Valid Thru.</description>
    <errorConditionFormula>cgcloud__Valid_Thru__c&lt;cgcloud__Valid_From__c</errorConditionFormula>
    <errorMessage>Valid From can&apos;t be later than Valid Thru.</errorMessage>
</ValidationRule>